--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "# Import libraries\n",
-    "import pandas as fd\n"
+    "import pandas as pd\n",
+    "import numpy as num\n"
    ]
   }
  ],
